[package]
name = "axum-guard-router"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
axum = "0.7.5"
futures = "0.3.30"
log = "0.4.22"
tower = "0.4.13"

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
